--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -1243,9 +1243,6 @@
   <data name="SingleTest" xml:space="preserve">
     <value>Одиночный тест</value>
   </data>
-  <data name="AutoTest" xml:space="preserve">
-    <value>Автоматизированное тестирование</value>
-  </data>
   <data name="SingleZeroCalibration" xml:space="preserve">
     <value>Одинарное обнуление</value>
   </data>
@@ -2427,5 +2424,8 @@
   </data>
   <data name="EditFilterWheelConfig" xml:space="preserve">
     <value>Изменить конфигурацию колеса фильтров</value>
+  </data>
+  <data name="ContinuousMeasurement" xml:space="preserve">
+    <value>Непрерывное измерение</value>
   </data>
 </root>
