--- a/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.zh-Hant.resx
@@ -2427,4 +2427,7 @@
   <data name="ContinuousMeasurement" xml:space="preserve">
     <value>連續測量</value>
   </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>語言(_L）</value>
+  </data>
 </root>
