--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2427,4 +2427,7 @@
   <data name="ContinuousMeasurement" xml:space="preserve">
     <value>Непрерывное измерение</value>
   </data>
+  <data name="MenuLanguage" xml:space="preserve">
+    <value>Язык(Л)</value>
+  </data>
 </root>
