--- a/UI/ColorVision.SocketProtocol/Properties/Resources.fr.resx
+++ b/UI/ColorVision.SocketProtocol/Properties/Resources.fr.resx
@@ -120,4 +120,13 @@
   <data name="CommunicationProtocol" xml:space="preserve">
     <value>Protocole de communication</value>
   </data>
+  <data name="ServerPort" xml:space="preserve">
+    <value>port</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>Adresse IP</value>
+  </data>
+  <data name="IsServerEnabled" xml:space="preserve">
+    <value>Serveur activé</value>
+  </data>
 </root>
