--- a/UI/ColorVision.SocketProtocol/Properties/Resources.ko.resx
+++ b/UI/ColorVision.SocketProtocol/Properties/Resources.ko.resx
@@ -120,4 +120,13 @@
   <data name="CommunicationProtocol" xml:space="preserve">
     <value>통신 프로토콜</value>
   </data>
+  <data name="ServerPort" xml:space="preserve">
+    <value>포트</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>IP 주소</value>
+  </data>
+  <data name="IsServerEnabled" xml:space="preserve">
+    <value>서버 활성화됨</value>
+  </data>
 </root>
