--- a/UI/ColorVision.SocketProtocol/Properties/Resources.resx
+++ b/UI/ColorVision.SocketProtocol/Properties/Resources.resx
@@ -100,4 +100,13 @@
   <data name="CommunicationProtocol" xml:space="preserve">
     <value>通信协议</value>
   </data>
+  <data name="ServerPort" xml:space="preserve">
+    <value>端口</value>
+  </data>
+  <data name="IPAddress" xml:space="preserve">
+    <value>IP地址</value>
+  </data>
+  <data name="IsServerEnabled" xml:space="preserve">
+    <value>服务器启用状态</value>
+  </data>
 </root>
