--- a/UI/ColorVision.ImageEditor/Properties/Resources.ko.resx
+++ b/UI/ColorVision.ImageEditor/Properties/Resources.ko.resx
@@ -192,4 +192,22 @@
   <data name="Relative" xml:space="preserve">
     <value>상대적 가치</value>
   </data>
+  <data name="IsShowMsg" xml:space="preserve">
+    <value>메시지 표시</value>
+  </data>
+  <data name="IsLayoutUpdated" xml:space="preserve">
+    <value>자동 새로 고침</value>
+  </data>
+  <data name="IsShowText" xml:space="preserve">
+    <value>표시 텍스트</value>
+  </data>
+  <data name="ColormapTypes" xml:space="preserve">
+    <value>거짓 색상</value>
+  </data>
+  <data name="Reload" xml:space="preserve">
+    <value>재장전</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>현재 이미지 적용</value>
+  </data>
 </root>
