--- a/UI/ColorVision.ImageEditor/Properties/Resources.resx
+++ b/UI/ColorVision.ImageEditor/Properties/Resources.resx
@@ -172,4 +172,22 @@
   <data name="Relative" xml:space="preserve">
     <value>相对值</value>
   </data>
+  <data name="IsShowMsg" xml:space="preserve">
+    <value>显示消息</value>
+  </data>
+  <data name="IsLayoutUpdated" xml:space="preserve">
+    <value>自动刷新</value>
+  </data>
+  <data name="IsShowText" xml:space="preserve">
+    <value>显示文字</value>
+  </data>
+  <data name="ColormapTypes" xml:space="preserve">
+    <value>伪彩色</value>
+  </data>
+  <data name="Reload" xml:space="preserve">
+    <value>重新加载</value>
+  </data>
+  <data name="Apply" xml:space="preserve">
+    <value>应用当前图片</value>
+  </data>
 </root>
