--- a/UI/ColorVision.ImageEditor/Properties/Resources.resx
+++ b/UI/ColorVision.ImageEditor/Properties/Resources.resx
@@ -172,4 +172,37 @@
   <data name="Relative" xml:space="preserve">
     <value>相对值</value>
   </data>
+  <data name="AutoLevelsAdjustment" xml:space="preserve">
+    <value>自动色阶调整</value>
+  </data>
+  <data name="WhiteBalanceAdjustment" xml:space="preserve">
+    <value> "白平衡调整</value>
+  </data>
+  <data name="GammaCorrection" xml:space="preserve">
+    <value>伽马校正</value>
+  </data>
+  <data name="LuminanceContrastAdjustment" xml:space="preserve">
+    <value>亮度对比度调整</value>
+  </data>
+  <data name="ThresholdProcessing" xml:space="preserve">
+    <value>阈值处理</value>
+  </data>
+  <data name="MoireRemove" xml:space="preserve">
+    <value>去除摩尔纹</value>
+  </data>
+  <data name="Sharpening" xml:space="preserve">
+    <value>锐化</value>
+  </data>
+  <data name="GaussianBlur" xml:space="preserve">
+    <value>高斯模糊</value>
+  </data>
+  <data name="MedianFilter" xml:space="preserve">
+    <value>中值滤波</value>
+  </data>
+  <data name="Canny" xml:space="preserve">
+    <value>边缘检测 (Canny)</value>
+  </data>
+  <data name="HistogramEqualization" xml:space="preserve">
+    <value>直方图均衡化</value>
+  </data>
 </root>
