--- a/UI/ColorVision.ImageEditor/Properties/Resources.zh-Hant.resx
+++ b/UI/ColorVision.ImageEditor/Properties/Resources.zh-Hant.resx
@@ -192,4 +192,37 @@
   <data name="Relative" xml:space="preserve">
     <value>相對值</value>
   </data>
+  <data name="AutoLevelsAdjustment" xml:space="preserve">
+    <value>自動色階調整</value>
+  </data>
+  <data name="WhiteBalanceAdjustment" xml:space="preserve">
+    <value>"白平衡調整</value>
+  </data>
+  <data name="GammaCorrection" xml:space="preserve">
+    <value>伽瑪校正</value>
+  </data>
+  <data name="LuminanceContrastAdjustment" xml:space="preserve">
+    <value>亮度對比調整</value>
+  </data>
+  <data name="ThresholdProcessing" xml:space="preserve">
+    <value>閾值處理</value>
+  </data>
+  <data name="MoireRemove" xml:space="preserve">
+    <value>去除摩爾紋</value>
+  </data>
+  <data name="Sharpening" xml:space="preserve">
+    <value>銳化</value>
+  </data>
+  <data name="GaussianBlur" xml:space="preserve">
+    <value>高斯模糊</value>
+  </data>
+  <data name="MedianFilter" xml:space="preserve">
+    <value>中值濾波</value>
+  </data>
+  <data name="Canny" xml:space="preserve">
+    <value>邊緣偵測 (Canny)</value>
+  </data>
+  <data name="HistogramEqualization" xml:space="preserve">
+    <value>直方圖均衡化</value>
+  </data>
 </root>
