修改SUMParam.cs，但不支持切换，有问题

--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -2430,4 +2430,22 @@
   <data name="MenuLanguage" xml:space="preserve">
     <value>Langue(L)</value>
   </data>
+  <data name="StartMeasurementValue_V_mA" xml:space="preserve">
+    <value>Valeur de mesure initiale (V/mA)</value>
+  </data>
+  <data name="EndMeasurementValue_V_mA" xml:space="preserve">
+    <value>Valeur de mesure finale (V/mA)</value>
+  </data>
+  <data name="VoltageSourceUnit_V_CurrentSourceUnit_mA" xml:space="preserve">
+    <value>La source de tension est mesurée en volts (V), la source de courant en mA.</value>
+  </data>
+  <data name="LimitVal" xml:space="preserve">
+    <value>Limite (V/mA)</value>
+  </data>
+  <data name="SourceMeterProtectionLimit_VoltageUnitV_CurrentUnitmA" xml:space="preserve">
+    <value>Limites de protection de la source ; unité de tension de la source : V ; unité de courant de la source : mA.</value>
+  </data>
+  <data name="IsVoltageSource" xml:space="preserve">
+    <value>S'agit-il d'une source de tension ?</value>
+  </data>
 </root>
