--- a/Engine/ColorVision.Engine/Properties/Resources.en.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.en.resx
@@ -2430,4 +2430,22 @@
   <data name="MenuLanguage" xml:space="preserve">
     <value>_Language</value>
   </data>
+  <data name="StartMeasurementValue_V_mA" xml:space="preserve">
+    <value>Initial measurement value (V/mA)</value>
+  </data>
+  <data name="EndMeasurementValue_V_mA" xml:space="preserve">
+    <value>End measurement value (V/mA)</value>
+  </data>
+  <data name="VoltageSourceUnit_V_CurrentSourceUnit_mA" xml:space="preserve">
+    <value>Voltage source is measured in volts (V), current source in mA.</value>
+  </data>
+  <data name="LimitVal" xml:space="preserve">
+    <value>Limit (V/mA)</value>
+  </data>
+  <data name="SourceMeterProtectionLimit_VoltageUnitV_CurrentUnitmA" xml:space="preserve">
+    <value>Limits for source protection; voltage source unit: V; current source unit: mA.</value>
+  </data>
+  <data name="IsVoltageSource" xml:space="preserve">
+    <value>Is Voltage Source</value>
+  </data>
 </root>
