--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2430,4 +2430,22 @@
   <data name="MenuLanguage" xml:space="preserve">
     <value>Язык(Л)</value>
   </data>
+  <data name="StartMeasurementValue_V_mA" xml:space="preserve">
+    <value>Начальное значение измерения (В/мА)</value>
+  </data>
+  <data name="EndMeasurementValue_V_mA" xml:space="preserve">
+    <value>Конечное значение измерения (В/мА)</value>
+  </data>
+  <data name="VoltageSourceUnit_V_CurrentSourceUnit_mA" xml:space="preserve">
+    <value>Напряжение источника измеряется в вольтах (В), ток источника — в мА.</value>
+  </data>
+  <data name="LimitVal" xml:space="preserve">
+    <value>Предел (В/мА)</value>
+  </data>
+  <data name="SourceMeterProtectionLimit_VoltageUnitV_CurrentUnitmA" xml:space="preserve">
+    <value>Пределы защиты источника; единица источника напряжения: В; единица источника тока: мА.</value>
+  </data>
+  <data name="IsVoltageSource" xml:space="preserve">
+    <value>Это источник напряжения?</value>
+  </data>
 </root>
