--- a/Engine/ColorVision.Engine/Properties/Resources.ko.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ko.resx
@@ -2451,4 +2451,10 @@
   <data name="TrueIsVoltageSource_FalseIsCurrentSource" xml:space="preserve">
     <value>`true`는 전압원을 나타내고, `false`는 전류원을 나타냅니다.</value>
   </data>
+  <data name="MeasureType" xml:space="preserve">
+    <value>측정 유형</value>
+  </data>
+  <data name="VoltageSourceCurrentSourceSelection" xml:space="preserve">
+    <value>전압원, 전류원 선택</value>
+  </data>
 </root>
