--- a/Engine/ColorVision.Engine/Properties/Resources.fr.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.fr.resx
@@ -2457,4 +2457,10 @@
   <data name="VoltageSourceCurrentSourceSelection" xml:space="preserve">
     <value>sélection de la source de tension et de la source de courant</value>
   </data>
+  <data name="EnableExposure" xml:space="preserve">
+    <value>Activation de l'exposition</value>
+  </data>
+  <data name="EnableFocus" xml:space="preserve">
+    <value>Activer la mise au point</value>
+  </data>
 </root>
