--- a/Engine/ColorVision.Engine/Properties/Resources.ja.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ja.resx
@@ -2457,4 +2457,10 @@
   <data name="VoltageSourceCurrentSourceSelection" xml:space="preserve">
     <value>電圧源、電流源の選択</value>
   </data>
+  <data name="EnableExposure" xml:space="preserve">
+    <value>露出を有効にする</value>
+  </data>
+  <data name="EnableFocus" xml:space="preserve">
+    <value>フォーカスを有効にする</value>
+  </data>
 </root>
