--- a/Engine/ColorVision.Engine/Properties/Resources.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.resx
@@ -2457,4 +2457,10 @@
   <data name="VoltageSourceCurrentSourceSelection" xml:space="preserve">
     <value>电压源,电流源选择</value>
   </data>
+  <data name="EnableExposure" xml:space="preserve">
+    <value>曝光使能</value>
+  </data>
+  <data name="EnableFocus" xml:space="preserve">
+    <value>对焦使能</value>
+  </data>
 </root>
