--- a/Engine/ColorVision.Engine/Properties/Resources.ru.resx
+++ b/Engine/ColorVision.Engine/Properties/Resources.ru.resx
@@ -2457,4 +2457,10 @@
   <data name="VoltageSourceCurrentSourceSelection" xml:space="preserve">
     <value>Выбор источника напряжения, источника тока</value>
   </data>
+  <data name="EnableExposure" xml:space="preserve">
+    <value>Включить экспозицию</value>
+  </data>
+  <data name="EnableFocus" xml:space="preserve">
+    <value>Включить фокус</value>
+  </data>
 </root>
